--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "mongoose": "^4.5.10",
         "passport": "^0.3.2",
         "passport-http": "^0.3.0",
-        "unirest": "^0.5.1"
+        "unirest": "^0.5.1",
+        "cors": "^2.8.4"
     },
     "devDependencies": {
         "chai": "^3.5.0",
